fix spacing around menu

--- a/resources/sass/_layout.sass
+++ b/resources/sass/_layout.sass
@@ -9,6 +9,8 @@ html
         margin: 0
 
 .menu
+    margin: 1rem 0
+
     > ul
         display: flex
 
